--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,18 @@
     <artifactId>Server3</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <dependency>
-        <groupId>org.apache.http components</groupId>
-        <artifactId>httpclient</artifactId>
-        <version>4.5.12</version>
-    </dependency>
-
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.0.2</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
